--- a/main.tex
+++ b/main.tex
@@ -317,6 +317,56 @@ Figure~\ref{fig:eres:neutrino} shows the comparison between reconstructed energy
 
 \newpage
 
+\section{Control Samples and Analysis Input Validation}
+\par The selections and analysis described below rely on well understood detector, simulation, calibration, and analysis tools performance. This section is dedicated to providing information pertaining to the robustness of the analysis developed. 
+\par It is important to note that in addition to detector simulation and reconstruction effects, $\nu$-Ar modeling can impact the level of data-mc agreement in various variables. We will try to point out when this might be the case.
+\subsection{$\pi^0$ control sample}
+\par A $\pi^0$ selection has been developed in order to obtain high-stats samples of $\pi^0$ events and $\gamma$ EM showers which can constrain $\pi^0$ production modeling uncertainties as well as validate the analyis' ability to reconstruct and select EM showers.
+\par Figure~\ref{fig:pi0:mass} shows the reconstructed $M\gamma\gamma$ for candidate $\pi^0$ events, with a calibrated but uncorrected (i.e. not accounting for biases in shower energy reconstruction caused by the incompleteness in charge clustering) energy reconstruction. Overall there is good data-MC agreement, though a roughly 20\% deficit in the data seems to suggest that $\pi^0$ production is over-estimated in the simulation. The alignment between the reconstructed mass peak between data and simulation seems to suggest good agreement in overall shower energy scale calibrations.
+
+\begin{figure}[H] 
+\begin{center}
+    \begin{subfigure}[b]{0.3\textwidth}
+    \centering
+    \includegraphics[width=1.00\textwidth]{pi0/pi0_mass_Y_01142020_5E19.pdf}
+    \caption{\label{fig:pi0:mass:5E19} Run 1 ``5E19'' open dataset.}
+    \end{subfigure}
+    \begin{subfigure}[b]{0.3\textwidth}
+    \centering
+    \includegraphics[width=1.00\textwidth]{pi0/pi0_mass_Y_01142020sel__RUN1.pdf}
+    \caption{\label{fig:pi0:mass:5E19} Run 1.}
+    \end{subfigure}
+    \begin{subfigure}[b]{0.3\textwidth}
+    \centering
+    \includegraphics[width=1.00\textwidth]{pi0/pi0_mass_Y_01142020sel_RUN3.pdf}
+    \caption{\label{fig:pi0:mass:5E19} Run 3.}
+    \end{subfigure}
+\caption{\label{fig:pi0:mass}Reconstructed $\pi^0$ mass.}
+\end{center}
+\end{figure}
+
+\par Figure~\ref{fig:pi0:dedx:RUN1} shows the reconstructed d$E$/d$x$ for $\gamma$ candidate showers. Aside from an overall normalization difference  it appears that, especially for the $\gamma$ peak at 4 MeV/cm, a bias between data and MC is present.\textcolor{red}{quantify and comment on this}.
+
+\begin{figure}[H] 
+\begin{center}
+    \begin{subfigure}[b]{0.4\textwidth}
+    \centering
+    \includegraphics[width=1.00\textwidth]{pi0/pi0_dedx1_fit_Y_01142020sel__RUN1.pdf}
+    \caption{\label{fig:pi0:dedx:RUN1:leading} Run 1 leading shower.}
+    \end{subfigure}
+    \begin{subfigure}[b]{0.4\textwidth}
+    \centering
+    \includegraphics[width=1.00\textwidth]{pi0/pi0_dedx2_fit_Y_01142020sel__RUN1.pdf}
+    \caption{\label{fig:pi0:dedx:RUN1:subleading} Run 1 sub-leading shower.}
+    \end{subfigure}
+\caption{\label{fig:pi0:dedx:RUN1}Reconstructed d$E$/d$x$ for leading and sub-leading showers.}
+\end{center}
+\end{figure}
+
+
+
+\newpage
+
 \section{$\nu_e$ Selections}
 
 \subsection{Common Tools and Inputs \textcolor{red}{Sophie + ...}}
@@ -667,6 +717,9 @@ K. Duffy, et al., \emph{Supporting note: Cross-section model and uncertainties},
 M. Ross-Lonergan, \emph{From MiniBooNE data to MicroBooNE LEE sensitivity: A step-by-step review and guide},\href{https://microboone-docdb.fnal.gov/cgi-bin/private/RetrieveFile?docid=20437}{DocDB 20437}
 \bibitem{bib:CRTPresel_Technote}
 D. Caratelli, et al., \emph{Use of the MicroBooNE Cosmic Ray Tagger for Electron Neutrino Preselection}, \href{https://microboone-docdb.fnal.gov/cgi-bin/private/RetrieveFile?docid=24031&filename=CRTPACTechnote.pdf&version=1}{DocDB 24031}
+
+\bibitem{bib:SCE}
+MicroBooNE Collaboration, \emph{A Method to Determine the Electric Field of Liquid Argon Time Projection Chambers Using a UV Laser System and its Application in MicroBooNE}, \href{https://arxiv.org/abs/1910.01430}{arXiv:1910.01430}
 
 \end{thebibliography}
 
